tests/fixtures/invalid/round_dict_dict.py
# Cannot call round() with Dict[str, int], Dict[str, int]
x = round({"a": 1}, {"a": 1})
